--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -17,8 +17,8 @@
       <div class="front">
         <img src="/src/assets/photos/Insurance_Health_2019_9-04.jpg" alt="">
         <div class="text">
-          <span class="text-1">Every new friend is a <br> new adventure</span>
-          <span class="text-2">Let's get connected</span>
+          <span class="text-1">Helping agents  <br> Help customers</span>
+          <span class="text-2">Smaller Print</span>
         </div>
       </div>
       <div class="back">
