--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Login and Registration Form in HTML & CSS | CodingLab</title>
+    <title>Theby Agent</title>
     <link rel="stylesheet" href="./sign-up.component.css" />
     <!-- Fontawesome CDN Link -->
     <link
@@ -20,11 +20,11 @@
           <img src="/src/assets/photos/Insurance_Health_2019_9-04.jpg" alt="" />
           <div class="text">
             <span class="text-1">Helping agents<br />Help customers</span>
-            <span class="text-2">Smaller Print</span>
+            <span class="text-2">Join us</span>
           </div>
         </div>
         <div class="back">
-          <!--<img class="backImg" src="images/backImg.jpg" alt="">-->
+          <img class="backImg" src="images/backImg.jpg" alt="">
           <div class="text">
             <span class="text-1"
               >Complete miles of journey<br />with one step</span
