--- a/src/app/features/auth/sign-up/sign-up.component.css
+++ b/src/app/features/auth/sign-up/sign-up.component.css
@@ -17,10 +17,10 @@ body{
 .container{
   border-radius: 10px;
   position: relative;
-  max-width: 1050px;
+  max-width: 850px;
   width: 100%;
   background: #fff;
-  padding: 50px 40px;
+  padding: 20px 50px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.2);
   perspective: 2700px;
 
@@ -39,6 +39,7 @@ input{
   transition: all 1s ease;
   transform-origin: left;
   transform-style: preserve-3d;
+
 }
 .container #flip:checked ~ .cover{
   transform: rotateY(-180deg);
@@ -50,6 +51,7 @@ input{
   left: 0;
   height: 100%;
   width: 100%;
+  
 }
 .cover .back{
   transform: rotateY(180deg);
@@ -61,9 +63,10 @@ input{
   position: absolute;
   height: 100%;
   width: 100%;
-  background: #7d2ae8;
+  background: #ab7fe4;
   opacity: 0.5;
   z-index: 12;
+  border-radius: 10px;
 }
 .container .cover::after{
   opacity: 0.3;
@@ -86,6 +89,8 @@ input{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+
 }
 .cover .text .text-1,
 .cover .text .text-2{
