LOgin/Signup Styling
BOrder radius correct on login screen

--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -62,7 +62,7 @@
             </form>
           </div>
           <div class="signup-form">
-            <div class="title">Signup</div>
+            <div class="title">Agent Signup</div>
 
             <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
               <div class="input-boxes">
