--- a/src/app/features/auth/sign-up/sign-up.component.css
+++ b/src/app/features/auth/sign-up/sign-up.component.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
+
 body{
   min-height: 100vh;
   display: flex;
@@ -13,9 +14,10 @@ body{
   justify-content: center;
   background: #4c3bec;
   padding: 30px;
+
   }
 .container{
-  border-radius: 10px;
+  border-radius: 15px;
   position: relative;
   max-width: 850px;
   width: 100%;
@@ -39,10 +41,13 @@ input{
   transition: all 1s ease;
   transform-origin: left;
   transform-style: preserve-3d;
+  border-radius: 15px;
 
 }
 .container #flip:checked ~ .cover{
   transform: rotateY(-180deg);
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
  .container .cover .front,
  .container .cover .back{
@@ -51,11 +56,16 @@ input{
   left: 0;
   height: 100%;
   width: 100%;
-  
+  /* border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px; */
+
 }
 .cover .back{
   transform: rotateY(180deg);
   backface-visibility: hidden;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+
 }
 .container .cover::before,
 .container .cover::after{
@@ -66,12 +76,21 @@ input{
   background: #ab7fe4;
   opacity: 0.5;
   z-index: 12;
-  border-radius: 10px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+
+
 }
+
+
 .container .cover::after{
   opacity: 0.3;
   transform: rotateY(180deg);
   backface-visibility: hidden;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+
+
 }
 .container .cover img{
   position: absolute;
@@ -79,6 +98,9 @@ input{
   width: 100%;
   object-fit: cover;
   z-index: 10;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+
 }
 .container .cover .text{
   position: absolute;
@@ -89,6 +111,9 @@ input{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+
 
 
 }
@@ -107,6 +132,7 @@ input{
   height: 100%;
   width: 100%;
   background: #fff;
+
 }
 .container .form-content{
   display: flex;
