--- a/src/app/features/auth/sign-up/sign-up.component.css
+++ b/src/app/features/auth/sign-up/sign-up.component.css
@@ -7,7 +7,7 @@
   font-family: "Poppins" , sans-serif;
 }
 
-body{
+.body{
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -26,6 +26,7 @@ body{
   box-shadow: 0 5px 10px rgba(0,0,0,0.2);
   perspective: 2700px;
 
+
 }
 input{
   margin-top: 5px;
@@ -41,13 +42,14 @@ input{
   transition: all 1s ease;
   transform-origin: left;
   transform-style: preserve-3d;
-  border-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 
 }
 .container #flip:checked ~ .cover{
   transform: rotateY(-180deg);
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  /* border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;*/
 }
  .container .cover .front,
  .container .cover .back{
@@ -111,8 +113,8 @@ input{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
 
 
 
