--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -66,7 +66,7 @@
                   <input
                     type="text"
                     placeholder="Enter your last name"
-                    formControlName="first_name"
+                    formControlName="last_name"
                   />
                 </div>
                 <div class="input-box">
@@ -95,7 +95,7 @@
                     formControlName="email"
                   />
                 </div>
-                <div class="user-info" formGroupname="user">
+                <div class="user-info">
                   <div class="input-box">
                     <i class="fas fa-lock"></i>
                     <input
@@ -117,7 +117,7 @@
               <div class="button input-box">
                 <input
                   type="submit"
-                  
+
                   value="Submit"
                 />
               </div>
