--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -1,3 +1,90 @@
+<!--
+<div class="signup-form">
+  <div class="title">Agent Signup</div>
+
+  <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
+    <div class="input-boxes">
+      <div class="agent-info" formGroupName="agent">
+        <div class="input-box">
+          <i class="fas fa-user"></i>
+          <input
+            type="text"
+            placeholder="Enter your first name"
+            formControlName="first_name"
+          />
+        </div>
+        <div class="input-box">
+          <i class="fas fa-user"></i>
+          <input
+            type="text"
+            placeholder="Enter your last name"
+            formControlName="last_name"
+          />
+        </div>
+        <div class="input-box">
+          <i class="fas fa-user"></i>
+          <input
+            type="text"
+            placeholder="Enter your national producer #"
+            formControlName="npn"
+          />
+        </div>
+        <div class="input-box">
+          <i class="fas fa-user"></i>
+          <input
+            type="text"
+            placeholder="Enter your state"
+            formControlName="state"
+          />
+        </div>
+      </div>
+      <div class="agent-info" formGroupName="user">
+        <div class="input-box">
+          <i class="fas fa-envelope"></i>
+          <input
+            type="text"
+            placeholder="Enter your email"
+            formControlName="email"
+          />
+        </div>
+        <div class="user-info">
+          <div class="input-box">
+            <i class="fas fa-lock"></i>
+            <input
+              type="password"
+              placeholder="Enter your password"
+              formControlName="password"
+            />
+          </div>
+          <div class="input-box">
+            <i class="fas fa-lock"></i>
+            <input
+              type="password"
+              placeholder="Re-enter your password"
+              formControlName="password_confirmation"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="button input-box">
+        <input
+          type="submit"
+
+          value="Submit"
+        />
+      </div>
+
+      <div class="text sign-up-text">
+        Already have an account? <label for="flip">Login now</label>
+      </div>
+    </div>
+  </form>
+</div> -->
+
+
+
+
+
 <div class="body">
   <div class="container">
     <input type="checkbox" id="flip" />
@@ -10,7 +97,7 @@
         </div>
       </div>
       <div class="back">
-        <!-- <img class="backImg" src="images/backImg.jpg" alt="" /> -->
+        <img class="backImg" src="images/backImg.jpg" alt="" />
         <div class="text">
           <span class="text-1"
             >Complete miles of journey<br />with one step</span
@@ -27,7 +114,7 @@
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-envelope"></i>
-                <input type="text" placeholder="Enter your email" required />
+                <input type="text" placeholder="Enter your email"/>
               </div>
               <div class="input-box">
                 <i class="fas fa-lock"></i>
