Split up login.signup component
had the templates combined. split up. it is not doing the transition that it was before but otherwise is working fine.

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,25 +1,148 @@
-<div class="login-form">
-  <div class="title">Login</div>
-  <form action="#">
-    <div class="input-boxes">
-      <div class="input-box">
-        <i class="fas fa-envelope"></i>
-        <input type="text" placeholder="Enter your email"/>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <title> Login and Registration Form in HTML & CSS | CodingLab </title>
+    <link rel="stylesheet" href="login.component.css">
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- tried removing this to index.html but broke keeping in just for now -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<body>
+<div class="body">
+  <div class="container">
+    <input type="checkbox" id="flip" />
+    <div class="cover">
+      <div class="front">
+        <img src="/assets/photos/Insurance_Health_2019_9-04.jpg" alt="" />
+        <div class="text">
+          <span class="text-1">Helping agents<br />Help customers</span>
+          <span class="text-2">Join us</span>
+        </div>
       </div>
-      <div class="input-box">
-        <i class="fas fa-lock"></i>
-        <input
-          type="password"
-          placeholder="Enter your password"
-        />
-      </div>
-      <div class="text"><a href="#">Forgot password?</a></div>
-      <div class="button input-box">
-        <input type="submit" value="Submit" />
-      </div>
-      <div class="text sign-up-text">
-        Don't have an account? <label for="flip">Signup now</label>
+      <div class="back">
+        <img class="backImg" src="images/backImg.jpg" alt="" />
+        <div class="text">
+          <span class="text-1"
+            >Complete miles of journey<br />with one step</span
+          >
+          <span class="text-2">Let's get started</span>
+        </div>
       </div>
     </div>
-  </form>
+    <div class="forms">
+      <div class="form-content">
+        <div class="login-form">
+          <div class="title">Login</div>
+          <form action="#">
+            <div class="input-boxes">
+              <div class="input-box">
+                <i class="fas fa-envelope"></i>
+                <input type="text" placeholder="Enter your email"/>
+              </div>
+              <div class="input-box">
+                <i class="fas fa-lock"></i>
+                <input
+                  type="password"
+                  placeholder="Enter your password"
+                  required
+                />
+              </div>
+              <div class="text"><a href="#">Forgot password?</a></div>
+              <div class="button input-box">
+                <input type="submit" value="Submit" />
+              </div>
+              <div class="text sign-up-text"  >
+                Don't have an account? <label for="flip"  [routerLink]="['/sign-up']" routerLinkActive="router-link-active"  >Signup now</label>
+              </div>
+            </div>
+          </form>
+        </div>
+        <!-- <div class="signup-form">
+          <div class="title">Agent Signup</div>
+
+          <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
+            <div class="input-boxes">
+              <div class="agent-info" formGroupName="agent">
+                <div class="input-box">
+                  <i class="fas fa-user"></i>
+                  <input
+                    type="text"
+                    placeholder="Enter your first name"
+                    formControlName="first_name"
+                  />
+                </div>
+                <div class="input-box">
+                  <i class="fas fa-user"></i>
+                  <input
+                    type="text"
+                    placeholder="Enter your last name"
+                    formControlName="last_name"
+                  />
+                </div>
+                <div class="input-box">
+                  <i class="fas fa-user"></i>
+                  <input
+                    type="text"
+                    placeholder="Enter your national producer #"
+                    formControlName="npn"
+                  />
+                </div>
+                <div class="input-box">
+                  <i class="fas fa-user"></i>
+                  <input
+                    type="text"
+                    placeholder="Enter your state"
+                    formControlName="state"
+                  />
+                </div>
+              </div>
+              <div class="agent-info" formGroupName="user">
+                <div class="input-box">
+                  <i class="fas fa-envelope"></i>
+                  <input
+                    type="text"
+                    placeholder="Enter your email"
+                    formControlName="email"
+                  />
+                </div>
+                <div class="user-info">
+                  <div class="input-box">
+                    <i class="fas fa-lock"></i>
+                    <input
+                      type="password"
+                      placeholder="Enter your password"
+                      formControlName="password"
+                    />
+                  </div>
+                  <div class="input-box">
+                    <i class="fas fa-lock"></i>
+                    <input
+                      type="password"
+                      placeholder="Re-enter your password"
+                      formControlName="password_confirmation"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="button input-box">
+                <input
+                  type="submit"
+
+                  value="Submit"
+                />
+              </div>
+
+              <div class="text sign-up-text">
+                Already have an account? <label for="flip">Login now</label>
+              </div> -->
+            <!-- </div>
+          </form>
+        </div>
+      </div> -->
+
+    </div>
+  </div>
 </div>
+</div>
+</body>
