--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -82,9 +82,17 @@
 </div> -->
 
 
-
-
-
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <title> Login and Registration Form in HTML & CSS | CodingLab </title>
+    <link rel="stylesheet" href="sign-up.component.css">
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- tried removing this to index.html but broke keeping in just for now -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<body>
 <div class="body">
   <div class="container">
     <input type="checkbox" id="flip" />
@@ -108,32 +116,7 @@
     </div>
     <div class="forms">
       <div class="form-content">
-        <div class="login-form">
-          <div class="title">Login</div>
-          <form action="#">
-            <div class="input-boxes">
-              <div class="input-box">
-                <i class="fas fa-envelope"></i>
-                <input type="text" placeholder="Enter your email"/>
-              </div>
-              <div class="input-box">
-                <i class="fas fa-lock"></i>
-                <input
-                  type="password"
-                  placeholder="Enter your password"
-                  required
-                />
-              </div>
-              <div class="text"><a href="#">Forgot password?</a></div>
-              <div class="button input-box">
-                <input type="submit" value="Submit" />
-              </div>
-              <div class="text sign-up-text">
-                Don't have an account? <label for="flip">Signup now</label>
-              </div>
-            </div>
-          </form>
-        </div>
+
         <div class="signup-form">
           <div class="title">Agent Signup</div>
 
@@ -210,12 +193,43 @@
               </div>
 
               <div class="text sign-up-text">
-                Already have an account? <label for="flip">Login now</label>
+                Already have an account? <label for="flip" [routerLink]="['/login']" routerLinkActive="router-link-active" >Login now</label>
               </div>
             </div>
           </form>
         </div>
       </div>
+
+
     </div>
+
   </div>
+
 </div>
+<div class="login-form">
+  <div class="title">Login</div>
+  <form action="#">
+    <div class="input-boxes">
+      <div class="input-box">
+        <i class="fas fa-envelope"></i>
+        <input type="text" placeholder="Enter your email"/>
+      </div>
+      <div class="input-box">
+        <i class="fas fa-lock"></i>
+        <input
+          type="password"
+          placeholder="Enter your password"
+          required
+        />
+      </div>
+      <div class="text"><a href="#">Forgot password?</a></div>
+      <div class="button input-box">
+        <input type="submit" value="Submit" />
+      </div>
+      <div class="text sign-up-text">
+        Don't have an account? <label for="flip">Signup now</label>
+      </div>
+    </div>
+  </form>
+</div>
+</body>
