--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -34,7 +34,7 @@
       <div class="form-content">
         <div class="login-form">
           <div class="title">Login</div>
-          <form action="#">
+          <form action="#" (ngSubmit)="login()">
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-envelope"></i>
