--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -206,7 +206,7 @@
   </div>
 
 </div>
-<div class="login-form">
+<!-- <div class="login-form">
   <div class="title">Login</div>
   <form action="#">
     <div class="input-boxes">
@@ -231,5 +231,5 @@
       </div>
     </div>
   </form>
-</div>
+</div> -->
 </body>
