basics of NavBar component

--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -98,7 +98,7 @@
     <input type="checkbox" id="flip" />
     <div class="cover">
       <div class="front">
-        <img src="/assets/photos/Insurance_Health_2019_9-04.jpg" alt="" />
+        <img src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg" alt="" />
         <div class="text">
           <span class="text-1">Helping agents<br />Help customers</span>
           <span class="text-2">Join us</span>
@@ -142,7 +142,7 @@
                 <div class="input-box">
                   <i class="fas fa-user"></i>
                   <input
-                    type="text"
+                    type="number"
                     placeholder="Enter your national producer #"
                     formControlName="npn"
                   />
