--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -14,14 +14,14 @@
     <input type="checkbox" id="flip" />
     <div class="cover">
       <div class="front">
-        <img src="/assets/photos/Insurance_Health_2019_9-04.jpg" alt="" />
+        <img src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg" alt="" />
         <div class="text">
-          <span class="text-1">Helping agents<br />Help customers</span>
+          <span class="text-1">Helping Agents<br />Help Customers</span>
           <span class="text-2">Join us</span>
         </div>
       </div>
       <div class="back">
-        <img class="backImg" src="images/backImg.jpg" alt="" />
+        <img class="backImg" src="images/backImg.jpg" alt=""/>
         <div class="text">
           <span class="text-1"
             >Complete miles of journey<br />with one step</span
