--- a/src/app/features/auth/sign-up/sign-up.component.css
+++ b/src/app/features/auth/sign-up/sign-up.component.css
@@ -6,14 +6,16 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
+img{
+  max-width: fit-content;
+}
 .body{
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #4c3bec;
-  padding: 30px;
+  padding: 130px;
 
   }
 .container{
@@ -26,6 +28,7 @@
   box-shadow: 0 5px 10px rgba(0,0,0,0.2);
   perspective: 2700px;
   opacity: 90%;
+padding: 65px;
 
 
 }
