add customer button on NAV/match padding on signup/login

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <ul>
 
     <li><a href="#0">Home</a></li>
-    <li><a href="#0">About</a></li>
+    <li><a href="#0">Add Customer</a></li>
     <li>
       <a href="#0">Agents</a>
       <ul>
