--- a/src/app/features/auth/login/login.component.css
+++ b/src/app/features/auth/login/login.component.css
@@ -23,7 +23,7 @@ img{
   max-width: 850px;
   width: 100%;
   background: #fff;
-  padding: 75px 50px;
+  padding: 65px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   perspective: 2700px;
 }
