corrected app component css
just needed background color

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,12 +14,12 @@
       </ul>
     </li>
     <li>
-      <a href="#0">Services</a>
+      <a href="#0">Customers</a>
       <ul>
-        <li><a href="#0">Print Design</a></li>
-        <li><a href="#0">Web Design</a></li>
-        <li><a href="#0">Mobile App Development</a></li>
-        <li><a href="#0">Contact</a></li>
+        <li><a href="#0">Add Customer</a></li>
+        <li><a href="#0">View Your Customers</a></li>
+        <li><a href="#0">All Available</a></li>
+        <!-- <li><a href="#0">PH</a></li> -->
       </ul>
     </li>
     <div class="auth">
@@ -29,6 +29,7 @@
           <li><a routerLink="/login">Login</a></li>
               <li><a [routerLink]="['/sign-up']" routerLinkActive="router-link-active" >Signup</a></li>
               <li><a (click)="onLogout()" >Logout</a></li>
+              <li><a >Account</a></li>
 
             </div>
 
