--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,6 +3,7 @@
 
 body {
   font-family: "Poppins" , sans-serif;
+  background-color: #692be4;
 }
 
 nav {
@@ -49,8 +50,8 @@ ul {
       display: block;
       margin: 12px -12px;
       padding: 0;
-      background: #FFA91B;
-      border: 2px solid #F7C833;
+      background: #00b9f7;
+      border: 1px solid #F7C833;
       border-right: 2px solid #F89329;
       border-bottom: 2px solid #F89329;
       border-radius: 5px;
