--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <ul>
 
     <li><a href="#0">Home</a></li>
-    <li><a href="#0">Add Customer</a></li>
+    <li><a href="#0">Placeholder</a></li>
     <li>
       <a href="#0">Agents</a>
       <ul>
@@ -17,8 +17,8 @@
       <a href="#0">Customers</a>
       <ul>
         <li><a href="#0">Add Customer</a></li>
-        <li><a href="#0">View Your Customers</a></li>
-        <li><a href="#0">All Available</a></li>
+        <li><a href="#0">Your Customers</a></li>
+        <li><a href="#0">Available Customers</a></li>
         <!-- <li><a href="#0">PH</a></li> -->
       </ul>
     </li>
