--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: "Poppins" , sans-serif;
-  background-color: #692be4;
+  background-color: #ffffff;
 }
 
 nav {
@@ -20,6 +20,7 @@ nav {
 }
 
 ul {
+
   justify-content: space-between;
   position: relative;
   display: flex;
@@ -106,4 +107,4 @@ display: flex;
 justify-content: right;
 
   }
-
+  
