--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
-  background: #4c3bec;
+
 }
 
 .body{
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #4c3bec;
+  background-color: #4c3bec;
   padding: 30px;
 
   }
