--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,37 +1,40 @@
 
-<nav>
+<body>
+  <nav>
 
-  <ul>
+    <ul>
 
-    <li><a href="#0">Home</a></li>
-    <li><a href="#0">Placeholder</a></li>
-    <li>
-      <a href="#0">Agents</a>
-      <ul>
-        <li><a href="#0">Laura</a></li>
-        <li><a href="#0">Walker</a></li>
-        <li><a href="#0">McKenna</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="#0">Customers</a>
-      <ul>
-        <li><a href="#0">Add Customer</a></li>
-        <li><a href="#0">Your Customers</a></li>
-        <li><a href="#0">Available Customers</a></li>
-        <!-- <li><a href="#0">PH</a></li> -->
-      </ul>
-    </li>
-    <div class="auth">
+      <li><a href="#0">Home</a></li>
+      <li><a href="#0">Placeholder</a></li>
+      <li>
+        <a href="#0">Agents</a>
+        <ul>
+          <li><a href="#0">Laura</a></li>
+          <li><a href="#0">Walker</a></li>
+          <li><a href="#0">McKenna</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#0">Customers</a>
+        <ul>
+          <li><a href="#0">Add Customer</a></li>
+          <li><a href="#0">Your Customers</a></li>
+          <li><a href="#0">Available Customers</a></li>
+          <!-- <li><a href="#0">PH</a></li> -->
+        </ul>
+      </li>
+      <div class="auth">
 
-      <hr>
+        <hr>
 
-          <li><a routerLink="/login">Login</a></li>
-              <li><a [routerLink]="['/sign-up']" routerLinkActive="router-link-active" >Signup</a></li>
-              <li><a (click)="onLogout()" >Logout</a></li>
-              <li><a >Account</a></li>
+            <li><a routerLink="/login">Login</a></li>
+                <li><a [routerLink]="['/sign-up']" routerLinkActive="router-link-active" >Signup</a></li>
+                <li><a (click)="onLogout()" >Logout</a></li>
+                <li><a >Account</a></li>
 
-            </div>
+              </div>
 
-  </ul>
-</nav>
+    </ul>
+  </nav>
+</body>
+
