--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -35,7 +35,7 @@
         <div class="login-form">
           <div class="title">Login</div>
           <form [formGroup]="loginForm" (ngSubmit)="login()">
-            <div class="user-info" formGroupName="user">
+            <div class="user-info">
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-envelope"></i>
