--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -17,7 +17,7 @@
         <img src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg" alt="" />
         <div class="text">
           <span class="text-1">Helping Agents<br />Help Customers</span>
-          <span class="text-2">Join us</span>
+          <span class="text-2">Login</span>
         </div>
       </div>
       <div class="back">
