--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -100,7 +100,7 @@
       <div class="front">
         <img src="\assets\photos\af5281e5-5174-43a4-a4e9-11d993cb35e8.jpg" alt="" />
         <div class="text">
-          <span class="text-1">Helping agents<br />Help customers</span>
+          <span class="text-1">Helping Agents<br />Help Customers</span>
           <span class="text-2">Join us</span>
         </div>
       </div>
