--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -186,6 +186,7 @@
               </div>
               <div class="button input-box">
                 <input
+                    [disabled]="!signupForm.valid"
                   type="submit"
 
                   value="Submit"
