--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,14 +23,19 @@
       <div class="auth">
         <hr />
 
-        <li *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></li>
-        <li *ngIf="!isAuthenticated">
+        @if(!isAuthenticated) {
+        <li><a routerLink="/login">Login</a></li>
+        } @if(!isAuthenticated){
+        <li>
           <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active"
             >Signup</a
           >
         </li>
-        <li *ngIf="isAuthenticated"><a (click)="onLogout()">Logout</a></li>
-        <li *ngIf="isAuthenticated" routerLink="/account"><a>Account</a></li>
+        } @if(isAuthenticated){
+        <li><a (click)="onLogout()">Logout</a></li>
+        } @if(isAuthenticated){
+        <li routerLink="/account"><a>Account</a></li>
+        }
       </div>
     </ul>
   </nav>
