--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       <li>
         <a href="#0">Customers</a>
         <ul>
-          <li><a href="#0">Add Customer</a></li>
+          <li><a routerLink="/add-customer">Add Customer</a></li>
           <li><a href="#0">Your Customers</a></li>
           <li><a href="#0">Available Customers</a></li>
           <!-- <li><a href="#0">PH</a></li> -->
