--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -20,7 +20,7 @@
           <span class="text-2">Login</span>
         </div>
       </div>
-      <div class="back">
+      <!-- <div class="back">
         <img class="backImg" src="images/backImg.jpg" alt=""/>
         <div class="text">
           <span class="text-1"
@@ -28,7 +28,7 @@
           >
           <span class="text-2">Let's get started</span>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="forms">
       <div class="form-content">
