--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#0">Home</a></li>
+      <li><a routerLink="/dashboard">Home</a></li>
       <li><a href="#0">Placeholder</a></li>
       <li>
         <a href="#0">Agents</a>
@@ -12,9 +12,9 @@
         </ul>
       </li>
       <li>
-        <a href="#0">Customers</a>
+        <a href="#0" class="customer">Customers</a>
         <ul>
-          <li><a routerLink="/add-customer">Add Customer</a></li>
+          <li ><a routerLink="/add-customer">Add Customer</a></li>
           <li><a href="#0">Your Customers</a></li>
           <li><a href="#0">Available Customers</a></li>
           <!-- <li><a href="#0">PH</a></li> -->
