--- a/src/app/features/customer/customer.component.css
+++ b/src/app/features/customer/customer.component.css
@@ -17,6 +17,7 @@ img{
 
   }
 .container{
+
   border-radius: 15px;
   position: relative;
   max-width: 850px;
@@ -25,7 +26,7 @@ img{
   padding: 20px 50px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.2);
   perspective: 2700px;
-  opacity: 90%;
+  opacity: 100%;
 padding: 65px;
 
 
@@ -120,13 +121,15 @@ input{
 
 
 
+
 }
 .cover .text .text-1,
 .cover .text .text-2{
   font-size: 26px;
   font-weight: 600;
-  color: #fff;
+  color: #ec1212;
   text-align: center;
+ text-shadow: #f00a0a;
 }
 .cover .text .text-2{
   font-size: 15px;
