--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,11 +12,11 @@
         </ul>
       </li>
       <li>
-        <a href="#0" class="customer">Customers</a>
+        <a href="#0">Customers</a>
         <ul>
           <li ><a routerLink="/add-customer">Add Customer</a></li>
-          <li><a href="#0">Your Customers</a></li>
-          <li><a href="#0">Available Customers</a></li>
+          <li><a routerLink="/you-customers">Your Customers</a></li>
+          <li><a routerLink="/available-customers">Available Customers</a></li>
           <!-- <li><a href="#0">PH</a></li> -->
         </ul>
       </li>
