--- a/src/app/features/customer/customer.component.html
+++ b/src/app/features/customer/customer.component.html
@@ -11,6 +11,7 @@
     <!-- tried removing this to index.html but broke keeping in just for now -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+  <!-- This is an add customer form that i should have named differently in hindsight as far as the component name goes  -->
   <body>
     <div class="body">
       <div class="container">
