--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,8 +15,9 @@
         <a href="#0">Customers</a>
         <ul>
           <li ><a routerLink="/add-customer">Add Customer</a></li>
-          <li><a routerLink="/you-customers">Your Customers</a></li>
+          <li><a routerLink="/your-customers">Your Customers</a></li>
           <li><a routerLink="/available-customers">Available Customers</a></li>
+          <li><a routerLink="/customers">All Customers</a></li>
           <!-- <li><a href="#0">PH</a></li> -->
         </ul>
       </li>
