Committing as working displaying basic customer data
About to implement a template for listing customer details

--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -6,7 +6,7 @@
 
   <ul>
     <li *ngFor="let customer of customers">
-      {{ customer.firstName }} - {{ customer.email }} <!-- Display customer properties -->
+      {{ customer.first_name }} - {{ customer.email }} <!-- Display customer properties -->
     </li>
   </ul>
 </div>
