styling on customers view

--- a/src/app/features/customer/customer.component.html
+++ b/src/app/features/customer/customer.component.html
@@ -67,10 +67,10 @@
 
                     </div>
                     <div class="input-box">
-                      <i class="fas fa-user"></i>
+                      <i class="fas fa-calendar"></i>
                       <input
                         type="text"
-                        placeholder="Enter date of birth"
+                        placeholder="yyyy-mm-dd"
                         formControlName="dob"
                       />
                     </div>
@@ -83,7 +83,7 @@
                       />
                     </div>
                     <div class="input-box">
-                      <i class="fas fa-user"></i>
+                      <i class="fas fa-envelope"></i>
                       <input
                         type="text"
                         placeholder="Enter email"
@@ -92,7 +92,7 @@
                     </div>
                     <div class="agent-info" formGroupName="address_attributes">
                       <div class="input-box">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-user"></i>
                         <input
                           type="number"
                           placeholder="Enter street number"
@@ -101,7 +101,7 @@
                       </div>
                       <div class="user-info">
                         <div class="input-box">
-                          <i class="fas fa-lock"></i>
+                          <i class="fas fa-user"></i>
                           <input
                             type="text"
                             placeholder="Enter street name"
@@ -109,7 +109,7 @@
                           />
                         </div>
                         <div class="input-box">
-                          <i class="fas fa-lock"></i>
+                          <i class="fas fa-user"></i>
                           <input
                             type="text"
                             placeholder="Enter your city"
@@ -117,15 +117,16 @@
                           />
                         </div>
                         <div class="input-box">
-                          <i class="fas fa-lock"></i>
+                          <i class="fas fa-user"></i>
                           <input
                             type="text"
                             placeholder="Enter your state"
                             formControlName="state"
+
                           />
                         </div>
                         <div class="input-box">
-                          <i class="fas fa-lock"></i>
+                          <i class="fas fa-user"></i>
                           <input
                             type="text"
                             placeholder="Enter your zip code"
