--- a/src/app/features/customer/view-customers/view-customers.component.html
+++ b/src/app/features/customer/view-customers/view-customers.component.html
@@ -1,14 +1,69 @@
-<!-- placeholder template as of 3/29/24 -->
-
+<link
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  rel="stylesheet"
+/>
 <div class="body">
-  <h2 >List of Customers</h2>
-  <button type="submit" (click)="getCustomers()"> Get Customers</button>
-
-  <ul>
-    <li *ngFor="let customer of customers">
-      {{ customer.first_name }} - {{ customer.email }} <!-- Display customer properties -->
-    </li>
-  </ul>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 mb-3 mb-lg-5">
+        <div class="overflow-hidden card table-nowrap table-card">
+          <div
+            class="card-header d-flex justify-content-between align-items-center"
+          >
+            <h5 class="mb-0">All Customers</h5>
+            <a href="#!" class="btn btn-light btn-sm">View All</a>
+          </div>
+          <div class="table-responsive">
+            <table class="table mb-0">
+              <thead class="small text-uppercase bg-body text-muted table-head">
+                <tr>
+                  <th>First Name</th>
+                  <th>Last Name</th>
+                  <th>Phone</th>
+                  <th>Email</th>
+                  <th>Agent</th>
+                  <th>Pol Exp</th>
+                  <th class="text-end">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="align-middle" *ngFor="let customer of customers">
+                  <td><span>
+                    {{customer.first_name}}
+                  </span>
+                  </td>
+                  <td><span>{{customer.last_name}}</span></td>
+                  <td><span>{{customer.phone}}</span></td>
+                  <td><span>{{customer.email}}</span></td>
+                  <td><span>{{customer.agentId}}</span></td>
+                  <td><span>Policy Hello!</span></td>
+                  <td class="text-end">
+                    <div class="drodown">
+                      <a
+                        data-bs-toggle="dropdown"
+                        href="#"
+                        class="btn p-1"
+                        aria-expanded="false"
+                      >
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                      </a>
+                      <div class="dropdown-menu dropdown-menu-end">
+                        <a
+                          routerLink="/customer-details"
+                          routerLinkActive="router-link-active"
+                          class="dropdown-item"
+                          >View Details</a
+                        >
+                        <!-- <a href="#!" class="dropdown-item">Assign Agent</a> -->
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
