add validators to phone
ts and template validator

--- a/src/app/features/customer/customer.component.html
+++ b/src/app/features/customer/customer.component.html
@@ -77,9 +77,10 @@
                     <div class="input-box">
                       <i class="fas fa-user"></i>
                       <input
-                        type="number"
+                        type="tel"
                         placeholder="Enter phone #"
                         formControlName="phone"
+                        maxlength="13"
                       />
                     </div>
                     <div class="input-box">
